services/vaultwarden/templates/externalip.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   run: vaultwarden
 name: vaultwarden-external-svc
spec:
  type: LoadBalancer
  selector:
    run: vaultwarden
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
