services/vaultwarden/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  labels:
    run: vaultwarden
spec:
  selector:
    run: vaultwarden
  ports:
  - name: vaultwarden
    port: 80
    targetPort: 80
  type: ClusterIP
